tests/fixtures/invalid/none_floordiv_bool.py
# Cannot floor divide None and Bool
x: None = None // True
